Fix missing methods